# LabProgAG

./: CMakeLists.txt  ListaSpesa.cpp  ListaSpesa.h  Observer.h  Prodotto.cpp  Prodotto.h  Subject.h  TipoProdotto.cpp  TipoProdotto.h  Utente.cpp  Utente.h  main.cpp
Google_Tests/: CMakeLists.txt  ListaSpesaTests.cpp  ProdottoTests.cpp  UtenteTests.cpp  runAllTests.cpp
Google_Tests/lib/googletest/: CMakeCache.txt
